docs-archive/apache-airflow-providers-amazon/9.37.0/_sources/_api/airflow/providers/amazon/aws/triggers/emr/index.rst.txt
airflow.providers.amazon.aws.triggers.emr
=========================================

.. py:module:: airflow.providers.amazon.aws.triggers.emr


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.emr.EmrAddStepsTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrCreateJobFlowTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrTerminateJobFlowTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrContainerTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrStepSensorTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrServerlessCreateApplicationTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrServerlessStartApplicationTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrServerlessStopApplicationTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrServerlessJobSensorTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrServerlessStartJobTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrServerlessDeleteApplicationTrigger
   airflow.providers.amazon.aws.triggers.emr.EmrServerlessCancelJobsTrigger


Module Contents
---------------

.. py:class:: EmrAddStepsTrigger(job_flow_id, step_ids, waiter_delay, waiter_max_attempts, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Poll for the status of EMR steps until they reach terminal state.

   :param job_flow_id: job_flow_id which contains the steps to check the state of
   :param step_ids: steps to check the state of
   :param waiter_delay: polling period in seconds to check for the status
   :param waiter_max_attempts: The maximum number of attempts to be made
   :param aws_conn_id: Reference to AWS connection id
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html



   .. py:attribute:: aws_hook_class


.. py:class:: EmrCreateJobFlowTrigger(job_flow_id, aws_conn_id = None, waiter_delay = 30, waiter_max_attempts = 60, waiter_name = 'job_flow_waiting', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Asynchronously poll the boto3 API and wait for the JobFlow to finish executing.

   :param job_flow_id: The id of the job flow to wait for.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EmrTerminateJobFlowTrigger(job_flow_id, aws_conn_id = None, waiter_delay = 30, waiter_max_attempts = 60, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Asynchronously poll the boto3 API and wait for the JobFlow to finish terminating.

   :param job_flow_id: ID of the EMR Job Flow to terminate
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EmrContainerTrigger(virtual_cluster_id, job_id, aws_conn_id = 'aws_default', waiter_delay = 30, waiter_max_attempts = sys.maxsize, cancel_on_kill = True, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Poll for the status of EMR container until reaches terminal state.

   :param virtual_cluster_id: Reference Emr cluster id
   :param job_id:  job_id to check the state
   :param aws_conn_id: Reference to AWS connection id
   :param waiter_delay: polling period in seconds to check for the status
   :param waiter_max_attempts: The maximum number of attempts to be made. Defaults to an infinite wait.
   :param cancel_on_kill: If True (default), cancel the EMR container job when the user
       marks the deferred task failed, clears it, or mark-succeeds it. Requires
       ``apache-airflow`` with ``BaseTrigger.on_kill()`` support; on older versions the
       hook is silently inert.
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:attribute:: virtual_cluster_id


   .. py:attribute:: job_id


   .. py:attribute:: cancel_on_kill
      :value: True



   .. py:method:: on_kill()
      :async:


      Cancel the EMR container job when the user acts on the deferred task.



.. py:class:: EmrStepSensorTrigger(job_flow_id, step_id, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Poll for the status of EMR container until reaches terminal state.

   :param job_flow_id: job_flow_id which contains the step check the state of
   :param step_id:  step to check the state of
   :param waiter_delay: polling period in seconds to check for the status
   :param waiter_max_attempts: The maximum number of attempts to be made
   :param aws_conn_id: Reference to AWS connection id
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EmrServerlessCreateApplicationTrigger(application_id, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Poll an Emr Serverless application and wait for it to be created.

   :param application_id: The ID of the application being polled.
   :waiter_delay: polling period in seconds to check for the status
   :param waiter_max_attempts: The maximum number of attempts to be made
   :param aws_conn_id: Reference to AWS connection id
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EmrServerlessStartApplicationTrigger(application_id, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Poll an Emr Serverless application and wait for it to be started.

   :param application_id: The ID of the application being polled.
   :waiter_delay: polling period in seconds to check for the status
   :param waiter_max_attempts: The maximum number of attempts to be made
   :param aws_conn_id: Reference to AWS connection id
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EmrServerlessStopApplicationTrigger(application_id, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Poll an Emr Serverless application and wait for it to be stopped.

   :param application_id: The ID of the application being polled.
   :waiter_delay: polling period in seconds to check for the status
   :param waiter_max_attempts: The maximum number of attempts to be made
   :param aws_conn_id: Reference to AWS connection id.
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EmrServerlessJobSensorTrigger(application_id, job_run_id, target_states, waiter_delay = 60, waiter_max_attempts = sys.maxsize, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Poll an EMR Serverless job run until it reaches a target or failure state.

   :param application_id: The ID of the application the job is running on.
   :param job_run_id: The ID of the job run.
   :param target_states: The states that indicate the sensor has succeeded.
   :param waiter_delay: The time in seconds to wait between polling attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made. Defaults to an infinite wait.
   :param aws_conn_id: Reference to the AWS connection ID.
   :param region_name: The AWS region where the job is running.
   :param verify: Whether to verify SSL certificates.
   :param botocore_config: Configuration dictionary for the botocore client.


   .. py:method:: hook()

      Build the hook this trigger waits with.



.. py:class:: EmrServerlessStartJobTrigger(application_id, job_id, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default', cancel_on_kill = True, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Poll an Emr Serverless job run and wait for it to be completed.

   :param application_id: The ID of the application the job in being run on.
   :param job_id: The ID of the job run.
   :param waiter_delay: polling period in seconds to check for the status
   :param waiter_max_attempts: The maximum number of attempts to be made
   :param aws_conn_id: Reference to AWS connection id
   :param cancel_on_kill: Flag to indicate whether to cancel the job when the task is killed.
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:attribute:: application_id


   .. py:attribute:: job_id


   .. py:attribute:: cancel_on_kill
      :value: True



   .. py:method:: get_task_instance(*, session)

      Get the task instance for the current trigger (Airflow 2.x compatibility).



   .. py:method:: get_task_state()
      :async:


      Get the current state of the task instance (Airflow 3.x).



   .. py:method:: safe_to_cancel()
      :async:


      Whether it is safe to cancel the EMR Serverless job.

      Returns True if task is NOT DEFERRED (user-initiated cancellation).
      Returns False if task is DEFERRED (triggerer restart - don't cancel job).



   .. py:method:: run()
      :async:


      Run the trigger and wait for the job to complete.

      If the task is cancelled while waiting, attempt to cancel the EMR Serverless job
      if cancel_on_kill is enabled and it's safe to do so.



   .. py:method:: on_kill()
      :async:


      Cancel the EMR Serverless job when the trigger is cancelled by a user action.

      This hook is available in Airflow 3.3+ via BaseTrigger.on_kill().
      For older Airflow versions, the CancelledError handler in run() provides
      the same cancellation behavior.



.. py:class:: EmrServerlessDeleteApplicationTrigger(application_id, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Poll an Emr Serverless application and wait for it to be deleted.

   :param application_id: The ID of the application being polled.
   :waiter_delay: polling period in seconds to check for the status
   :param waiter_max_attempts: The maximum number of attempts to be made
   :param aws_conn_id: Reference to AWS connection id
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EmrServerlessCancelJobsTrigger(application_id, aws_conn_id, waiter_delay, waiter_max_attempts, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for canceling a list of jobs in an EMR Serverless application.

   :param application_id: EMR Serverless application ID
   :param aws_conn_id: Reference to AWS connection id
   :param waiter_delay: Delay in seconds between each attempt to check the status
   :param waiter_max_attempts: Maximum number of attempts to check the status
   :param region_name: The AWS region where the resources to watch are.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:property:: hook_instance
      :type: airflow.providers.amazon.aws.hooks.base_aws.AwsGenericHook


      This property is added for backward compatibility.



